Added header, footer and implemented authentication

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
 @import 'tailwindcss';
+
+body {
+  font-family: 'Inter', system-ui, sans-serif;
+}
+
+@layer utilities {
+  .container {
+    width: 100%;
+    margin: auto;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  @media (min-width: 768px) {
+    .container {
+      padding-left: 4rem;
+      padding-right: 4rem;
+    }
+  }
+}
