--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,5 @@
-<router-outlet />
+<div class="min-h-screen flex flex-col">
+  <app-header></app-header>
+  <router-outlet />
+  <app-footer class="mt-auto"></app-footer>
+</div>
