--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -10,16 +10,27 @@
     </div>
 
     <div class="flex items-center text-sm text-gray-500 gap-4">
-      @if(auth.isAuthenticated()){
+      @if(isAuthenticated()){
       <div class="relative w-80 border border-gray-300 h-8 rounded-lg">
         <img src="search-icon.png" alt="Search Icon" class="w-6 absolute top-0.75 left-1" />
         <input
           type="text"
           title="search"
           class="h-8 w-72 focus:outline-none relative left-8 px-1"
+          #searchInput
+          (input)="onSearchInputChange(searchInput.value)"
         />
       </div>
-      <img src="cart-icon.png" alt="Cart Icon" class="w-7" />
+      <div class="relative cursor-pointer">
+        <img src="cart-icon.png" alt="Cart Icon" class="w-7" />
+        @if (cartCount() > 0) {
+        <span
+          class="absolute -top-2 -right-2 bg-sky-500 text-white text-[10px] rounded-full w-4 h-4 flex items-center justify-center"
+        >
+          {{ cartCount() }}
+        </span>
+        }
+      </div>
       <span>Account</span>
       } @else {
       <a class="cursor-pointer">Log in</a>
