--- a/src/app/products/components/pagination/pagination.html
+++ b/src/app/products/components/pagination/pagination.html
@@ -1,19 +1,25 @@
 <div class="flex justify-center items-center gap-3 mt-4">
   <button
     class="w-8 h-8 flex justify-center items-center text-gray-400 disabled:text-gray-200"
+    [class]="{
+      'cursor-pointer': canGoPrevious()
+    }"
     [disabled]="!canGoPrevious()"
     (click)="goPrev()"
+    type="button"
+    aria-label="Go to pervious page"
   >
     <i class="fa-solid fa-angle-left"></i>
   </button>
 
   @for (page of visiblePages(); track page; let i = $index) {
   <button
-    class="w-8 h-8 border border-gray-300 rounded-lg p-1 flex justify-center items-center text-xs font-semibold"
+    class="w-8 h-8 cursor-pointer border border-gray-300 rounded-lg p-1 flex justify-center items-center text-xs font-semibold"
     [class]="{
-      'bg-sky-500': i === 0
+      'bg-sky-500': page === currentPage()
     }"
-    (click)="loadAnotherProductsPage(page)"
+    (click)="fetchPage(page)"
+    type="button"
   >
     {{ page }}
   </button>
@@ -23,8 +29,13 @@
 
   <button
     class="w-8 h-8 flex justify-center items-center text-gray-400 disabled:text-gray-200"
+    [class]="{
+      'cursor-pointer': canGoNext()
+    }"
     [disabled]="!canGoNext()"
     (click)="goNext()"
+    type="button"
+    aria-label="Go to next page"
   >
     <i class="fa-solid fa-angle-right"></i>
   </button>
